Add DatabaseDriverService.findAll Method and Refactor DriverStorageService Path Handling
- Implemented a new method findAll in DatabaseDriverService to retrieve all database drivers.
- Refactored DriverStorageService to replace deprecated Paths.get() with Path.of() for improved readability and modern Java practices.
- Removed unused imports in DatabaseDriverResource to clean up the codebase.